CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(BUILD_CHIPMUNK "Build the Chipmunk module" ON)
OPTION(BUILD_DEVIL "Build the DevIL module" ON)
OPTION(BUILD_FREETYPE "Build the Freetype module" ON)
OPTION(BUILD_GLFW "Build the GLFW module" OFF)
OPTION(BUILD_OPENAL "Build the OpenAL module" ON)
OPTION(BUILD_OPENGL "Build the OpenGL module" ON)
OPTION(BUILD_SDL "Build the SDL module" ON)
OPTION(BUILD_SNDFILE "Build the SndFile module" ON)

project(SIEGEModules)
IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(SG_FNAME_DEBUG ".debug")
ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(SG_FNAME_DEBUG)
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
SET(SG_FNAME_PREFIX "SGModule-")

include_directories(include)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules/")

#if(CYGWIN) # should we have a separate target for cygwin?
#  set(OS cygwin)
if(WIN32) # also true when on cygwin
  set(OS windows)
elseif(APPLE)
  set(OS darwin)
elseif(UNIX) # note: has to be last as UNIX is true for APPLE and CYGWIN
  set(OS linux)
else(WIN32)
  set(OS unknown)
  message(WARNING "Unknown platform!")
endif(WIN32)
set(ARCH ${CMAKE_SYSTEM_PROCESSOR})

set(BIN_DIR ${OS}-${ARCH})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/${BIN_DIR})

if(BUILD_CHIPMUNK)
    add_subdirectory(SGModule-Chipmunk)
endif(BUILD_CHIPMUNK)
if(BUILD_DEVIL)
    add_subdirectory(SGModule-DevIL)
endif(BUILD_DEVIL)
if(BUILD_FREETYPE)
    add_subdirectory(SGModule-Freetype)
endif(BUILD_FREETYPE)
if(BUILD_GLFW)
    add_subdirectory(SGModule-GLFW)
endif(BUILD_GLFW)
if(BUILD_OPENAL)
    add_subdirectory(SGModule-OpenAL)
endif(BUILD_OPENAL)
if(BUILD_OPENGL)
    add_subdirectory(SGModule-OpenGL)
endif(BUILD_OPENGL)
if(BUILD_SDL)
    add_subdirectory(SGModule-SDL)
endif(BUILD_SDL)
if(BUILD_SNDFILE)
    add_subdirectory(SGModule-SndFile)
endif(BUILD_SNDFILE)
