PROJECT(SGModule-Chipmunk)

FIND_PACKAGE(Chipmunk REQUIRED)

INCLUDE_DIRECTORIES(../include ${CHIPMUNK_INCLUDE_DIR})
ADD_LIBRARY(SGModule-Chipmunk MODULE main body constraint shape space test)
TARGET_LINK_LIBRARIES(SGModule-Chipmunk ${CHIPMUNK_LIBRARY})
SET_TARGET_PROPERTIES(SGModule-Chipmunk PROPERTIES ENABLE_EXPORTS ON)
