PROJECT(Chipmunk)

FIND_PACKAGE(Chipmunk REQUIRED)

INCLUDE_DIRECTORIES(../include ${CHIPMUNK_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main body constraint shape space test)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CHIPMUNK_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
