PROJECT(DevIL)

FIND_PACKAGE(DevIL REQUIRED)

INCLUDE_DIRECTORIES(../include ${DEVIL_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main load)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${DEVIL_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
