PROJECT(SGModule-Freetype)

FIND_PACKAGE(Freetype2 REQUIRED)

INCLUDE_DIRECTORIES(../include ${FREETYPE2_INCLUDE_DIR} ${FREETYPE2_INCLUDE_DIR}/freetype2)
ADD_LIBRARY(SGModule-Freetype MODULE main load)
TARGET_LINK_LIBRARIES(SGModule-Freetype ${FREETYPE2_LIBRARY})
SET_TARGET_PROPERTIES(SGModule-Freetype PROPERTIES ENABLE_EXPORTS ON)
