PROJECT(SGModule-GLFW)

FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(../include ${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
ADD_LIBRARY(SGModule-GLFW MODULE main joystick keyboard mouse window)
TARGET_LINK_LIBRARIES(SGModule-GLFW ${GLFW_LIBRARY} ${OPENGL_LIBRARY})
SET_TARGET_PROPERTIES(SGModule-GLFW PROPERTIES ENABLE_EXPORTS ON)
