PROJECT(GLFW)

FIND_PACKAGE(GLFW REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(../include ${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main joystick keyboard mouse window)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLFW_LIBRARY} ${OPENGL_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
