PROJECT(SGModule-OpenGL)

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(../include ${OPENGL_INCLUDE_DIR})
ADD_LIBRARY(SGModule-OpenGL MODULE main context draw surface texture viewport)
TARGET_LINK_LIBRARIES(SGModule-OpenGL ${OPENGL_LIBRARY})
SET_TARGET_PROPERTIES(SGModule-OpenGL PROPERTIES ENABLE_EXPORTS ON)
