PROJECT(OpenGL)

FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(../include ${OPENGL_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main context draw surface texture viewport)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENGL_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
