PROJECT(SDL)

FIND_PACKAGE(SDL REQUIRED)

INCLUDE_DIRECTORIES(../include ${SDL_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main joystick keyboard mouse window)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
