PROJECT(AI)

##FIND_PACKAGE(SndFile REQUIRED)

##INCLUDE_DIRECTORIES(../include ${SNDFILE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(../include)
ADD_LIBRARY(${PROJECT_NAME} MODULE main load)
##TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SNDFILE_LIBRARY})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${AI_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
