CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_EXAMPLES "Build the examples" ON)

MACRO(EXAMPLE desc name)
    STRING(TOUPPER ${name} bname)
    STRING(TOLOWER ${name} sname)
    OPTION(BUILD_EXAMPLE_${bname} "Build the ${desc} example" ON)
    IF(BUILD_EXAMPLE_${bname})
        PROJECT(Example-${name})
        ADD_DEPENDENCIES(examples ${PROJECT_NAME})

        ADD_EXECUTABLE(${PROJECT_NAME} ${sname})
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE ${AUX_LIBRARIES})

		IF(INSTALL_EXAMPLES)
			INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
		ENDIF(INSTALL_EXAMPLES)
    ENDIF(BUILD_EXAMPLE_${bname})
ENDMACRO(EXAMPLE)

IF(BUILD_EXAMPLES)
    ADD_CUSTOM_TARGET(examples)

    EXAMPLE("A*" AStar)
    EXAMPLE("audio" Audio)
    EXAMPLE("collision detection" Coldet)
    EXAMPLE("draw" Draw)
    EXAMPLE("emitter" Emitter)
    EXAMPLE("gradient" Gradient)
    EXAMPLE("minimal" Minimal)
    EXAMPLE("sprite" Sprite)
    EXAMPLE("text" Text)
    EXAMPLE("physics" Physics)
    EXAMPLE("pyramid" Pyramid)
    EXAMPLE("shadow" Shadow)
    EXAMPLE("demo" Demo)
    EXAMPLE("surface" Surface)
    EXAMPLE("thread" Thread)
    EXAMPLE("directory" Directory)
ENDIF(BUILD_EXAMPLES)
