CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_EXAMPLES "Build the examples" ON)

MACRO(EXAMPLE name)
    STRING(TOLOWER ${name} sname)
    set(deps ${ARGN})

    set(eok 1)
    foreach(dep ${deps})
        if(NOT "SG_USE_${dep}")
            set(eok 0)
        endif()
    endforeach()

    if(eok)
        PROJECT(Example-${name})
        ADD_DEPENDENCIES(examples ${PROJECT_NAME})

        ADD_EXECUTABLE(${PROJECT_NAME} ${sname})
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE.static ${AUX_LIBRARIES})

        IF(INSTALL_EXAMPLES)
            INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
        ENDIF(INSTALL_EXAMPLES)
    else()
        add_custom_target(Example-${name} ALL COMMENT "SKIPPING Example-${name} (required [SG_]USE_* flag deactivated)")
        ADD_DEPENDENCIES(examples Example-${name})
    endif()
ENDMACRO(EXAMPLE)

IF(BUILD_EXAMPLES)
    ADD_CUSTOM_TARGET(examples)

    EXAMPLE(AStar)
    EXAMPLE(Audio)
    EXAMPLE(Coldet)
    EXAMPLE(Draw)
    EXAMPLE(Emitter)
    EXAMPLE(Gradient)
    EXAMPLE(Minimal)
    EXAMPLE(Sprite)
    EXAMPLE(Text)
    EXAMPLE(Physics PHYSICS)
    EXAMPLE(Pyramid PHYSICS)
    EXAMPLE(Shadow)
    EXAMPLE(Demo PHYSICS)
    EXAMPLE(Surface)
    EXAMPLE(Thread)
    EXAMPLE(Directory)
    EXAMPLE(Set)
    EXAMPLE(Atlas)
    EXAMPLE(Timer)
ENDIF(BUILD_EXAMPLES)
