CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

OPTION(BUILD_MODULES "Build the modules" ON)

IF(BUILD_MODULES)
    ADD_CUSTOM_TARGET(modules)

    IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(SG_FNAME_DEBUG ".debug")
    ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(SG_FNAME_DEBUG)
    ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(SG_FNAME_PREFIX "SGModule-")

    SET(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/modules")

    ADD_SUBDIRECTORY(SGModule-Chipmunk)
    ADD_SUBDIRECTORY(SGModule-DevIL)
    ADD_SUBDIRECTORY(SGModule-Freetype)
    ADD_SUBDIRECTORY(SGModule-GLFW)
    ADD_SUBDIRECTORY(SGModule-OpenAL)
    ADD_SUBDIRECTORY(SGModule-OpenGL)
    ADD_SUBDIRECTORY(SGModule-SDL)
    ADD_SUBDIRECTORY(SGModule-SndFile)
ENDIF(BUILD_MODULES)
