CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_SIEGE "Build the SIEGE library" ON)

IF(BUILD_SIEGE)
	FILE(GLOB_RECURSE SIEGE_SOURCES *.c)

    PROJECT(SIEGE)
		ADD_LIBRARY(${PROJECT_NAME} SHARED ${SIEGE_SOURCES})

		INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
	PROJECT(SIEGE.static)
		ADD_LIBRARY(${PROJECT_NAME} STATIC ${SIEGE_SOURCES})

		INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib)
ENDIF(BUILD_SIEGE)
