CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_TESTS "Build the tests" ON)

MACRO(TEST name)
    STRING(TOLOWER ${name} sname)
    STRING(REGEX REPLACE "-" "" oname ${name})

    PROJECT(Test-${oname} C)
    ADD_DEPENDENCIES(tests ${PROJECT_NAME})

    ADD_EXECUTABLE(${PROJECT_NAME} ${sname})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} SIEGE.static ${AUX_LIBRARIES})
ENDMACRO(TEST)

IF(BUILD_TESTS)
    ADD_CUSTOM_TARGET(tests)

    TEST(Text-Align)
    TEST(Text-UTF)
ENDIF(BUILD_TESTS)
