CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_LIBRARY(SIEGE_LIBRARY NAMES libSIEGE.dll.a libSIEGE.a SIEGE.dll.a SIEGE.a libSIEGE.dll.lib libSIEGE.lib SIEGE.dll.lib libSIEGE.lib PATHS build)
INCLUDE_DIRECTORIES(include)

PROJECT(HelloWorld)
    ADD_EXECUTABLE(${PROJECT_NAME} main.c)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SIEGE_LIBRARY})
    IF(UNIX)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} dl m)
    ENDIF(UNIX)
