CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_CHIPMUNK "Build the Chipmunk module" ON)

IF(BUILD_MOD_CHIPMUNK)
    PROJECT(Chipmunk)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(Chipmunk)
    IF(CHIPMUNK_FOUND)
        INCLUDE_DIRECTORIES(${CHIPMUNK_INCLUDE_DIR})
        ADD_LIBRARY(${PROJECT_NAME} MODULE main body collision constraint shape space test)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CHIPMUNK_LIBRARY})
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

        IF(INSTALL_MODULES)
			INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
		ENDIF(INSTALL_MODULES)
    ELSE(CHIPMUNK_FOUND)
        MESSAGE(WARNING "Could not find Chipmunk library - module will not be built")
    ENDIF(CHIPMUNK_FOUND)
ENDIF(BUILD_MOD_CHIPMUNK)
