CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_FREETYPE "Build the Freetype module" ON)



IF(BUILD_MOD_FREETYPE)
    PROJECT(Freetype)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(Freetype2 REQUIRED)

    INCLUDE_DIRECTORIES(${FREETYPE2_INCLUDE_DIR} ${FREETYPE2_INCLUDE_DIR}/freetype2)
    ADD_LIBRARY(${PROJECT_NAME} MODULE main load)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FREETYPE2_LIBRARY})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
ENDIF(BUILD_MOD_FREETYPE)
