CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_GLFW "Build the GLFW module" OFF)

IF(BUILD_MOD_GLFW)
    PROJECT(GLFW)
    MESSAGE(WARNING "GLFW module does not work properly in some Linux distributions and thus may be removed in the future.")
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(GLFW REQUIRED)
    FIND_PACKAGE(OpenGL REQUIRED)

    INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
    ADD_LIBRARY(${PROJECT_NAME} MODULE main joystick keyboard mouse window)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLFW_LIBRARY} ${OPENGL_LIBRARY})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
ENDIF(BUILD_MOD_GLFW)
