CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_GLFW "Build the GLFW module" OFF)

IF(BUILD_MOD_GLFW)
    PROJECT(GLFW)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

    FIND_PACKAGE(GLFW)
    FIND_PACKAGE(OpenGL)
    IF(GLFW_FOUND AND OPENGL_FOUND)
        INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
        ADD_LIBRARY(${PROJECT_NAME} MODULE main joystick keyboard mouse window)
        TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${GLFW_LIBRARY} ${OPENGL_LIBRARY})
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
        SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

        INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
    ELSE(GLFW_FOUND AND OPENGL_FOUND)
        IF(NOT GLFW_FOUND)
            MESSAGE(WARNING "Could not find GLFW library - module will not be built")
        ELSE(NOT GLFW_FOUND)
            MESSAGE(WARNING "Could not find OpenGL library - module will not be built")
        ENDIF(NOT GLFW_FOUND)
    ENDIF(GLFW_FOUND AND OPENGL_FOUND)
ENDIF(BUILD_MOD_GLFW)
