CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
OPTION(BUILD_MOD_ICONV "Build the IConv module" ON)

IF(BUILD_MOD_ICONV)
	PROJECT(IConv)
    ADD_DEPENDENCIES(modules ${PROJECT_NAME})

	FIND_PACKAGE(IConv REQUIRED)

    INCLUDE_DIRECTORIES(${ICONV_INCLUDE_DIR})
    ADD_LIBRARY(${PROJECT_NAME} MODULE main conv)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${ICONV_LIBRARY})
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
    SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)

    INSTALL(TARGETS ${PROJECT_NAME} DESTINATION modules)
ENDIF(BUILD_MOD_ICONV)
