PROJECT(OpenAL)

FIND_PACKAGE(OpenAL REQUIRED)

INCLUDE_DIRECTORIES(../include ${OPENAL_INCLUDE_DIR})
ADD_LIBRARY(${PROJECT_NAME} MODULE main buffer source)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENAL_LIBRARY})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "${SG_FNAME_PREFIX}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}${SG_FNAME_DEBUG}")
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS ON)
